force-app/main/default/objects/Reg_Import_Rec__c/Reg_Import_Rec__c.object-meta.xml
<CustomObject>
    <label>Reg Import Rec</label>
    <nameField>
        <displayFormat>rir-{0000}</displayFormat>
        <label>RegImport Rec Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reg Import Recs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>