force-app/main/default/objects/Reg_Import_Rec__c/fields/Boat__c.field-meta.xml
<CustomField>
    <fullName>Boat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Boat</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Reg Import Recs</relationshipLabel>
    <relationshipName>Reg_Import_Recs</relationshipName>
    <type>Lookup</type>
</CustomField>