force-app/main/default/objects/Reg_Import_Rec__c/fields/Boat_Lot__c.field-meta.xml
<CustomField>
    <fullName>Boat_Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Boat_Lot</label>
    <referenceTo>GMBLASERP__Lot__c</referenceTo>
    <relationshipLabel>Reg Import Recs</relationshipLabel>
    <relationshipName>Reg_Import_Recs</relationshipName>
    <type>Lookup</type>
</CustomField>