force-app/main/default/objects/Reg_Import_Rec__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>