force-app/main/default/objects/Reg_Import_Rec__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reg Import Recs (customer)</relationshipLabel>
    <relationshipName>Reg_Import_Recs1</relationshipName>
    <type>Lookup</type>
</CustomField>