force-app/main/default/objects/Reg_Import_Rec__c/fields/date_of_sale__c.field-meta.xml
<CustomField>
    <fullName>date_of_sale__c</fullName>
    <label>date_of_sale</label>
    <type>Date</type>
</CustomField>