force-app/main/default/objects/Reg_Import_Rec__c/fields/first_name__c.field-meta.xml
<CustomField>
    <fullName>first_name__c</fullName>
    <label>first_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>