force-app/main/default/objects/Reg_Import_Rec__c/fields/Motor__c.field-meta.xml
<CustomField>
    <fullName>Motor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motor</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Reg Import Recs (Motor)</relationshipLabel>
    <relationshipName>Reg_Import_Recs1</relationshipName>
    <type>Lookup</type>
</CustomField>