force-app/main/default/objects/Reg_Import_Rec__c/fields/Motor_Lot__c.field-meta.xml
<CustomField>
    <fullName>Motor_Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motor Lot</label>
    <referenceTo>GMBLASERP__Lot__c</referenceTo>
    <relationshipLabel>Reg Import Recs (Motor Lot)</relationshipLabel>
    <relationshipName>Reg_Import_Recs1</relationshipName>
    <type>Lookup</type>
</CustomField>