force-app/main/default/objects/Reg_Import_Rec__c/fields/Motor_Name__c.field-meta.xml
<CustomField>
    <fullName>Motor_Name__c</fullName>
    <label>Motor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>