force-app/main/default/objects/Reg_Import_Rec__c/fields/Motor_Reg__c.field-meta.xml
<CustomField>
    <fullName>Motor_Reg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motor Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Reg Import Recs (Motor Registration)</relationshipLabel>
    <relationshipName>Reg_Import_Recs1</relationshipName>
    <type>Lookup</type>
</CustomField>