force-app/main/default/objects/Reg_Import_Rec__c/fields/Motor_Ser__c.field-meta.xml
<CustomField>
    <fullName>Motor_Ser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motor Serial Number</label>
    <referenceTo>GMBLASERP__Serial_Number__c</referenceTo>
    <relationshipLabel>Reg Import Recs (Motor Serial Number)</relationshipLabel>
    <relationshipName>Reg_Import_Recs1</relationshipName>
    <type>Lookup</type>
</CustomField>