force-app/main/default/objects/Reg_Import_Rec__c/fields/motor_sn__c.field-meta.xml
<CustomField>
    <fullName>motor_sn__c</fullName>
    <label>motor_sn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>